# Backend_Lenta

./: .env.example  .gitignore  Dockerfile  README.md  requirements.txt  swagger.json  swagger.yaml
backend/: Dockerfile  logs  pyproject.toml  requirements.txt  start_backend.sh
backend/api/: mixins.py  serializers.py  urls.py  views.py
backend/backend/: asgi.py  logger.py  logger_config.py  models.py  settings.py  urls.py
backend/backend/sales/: apps.py  sales.py
backend/backend/users/: users.py
backend/sales/: admin.py  apps.py  models.py
backend/sales/management/commands/: load_sales_data.py  load_shop_data.py  load_sku_data.py  sales_df_train.csv
backend/sales/migrations/: 0001_initial.py
backend/users/: admin.py  auth_backends.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/users/migrations/: 0001_initial.py
infra/: docker-compose.yml  nginx.conf
infra/nginx/: default.conf
